# Turtlebot3-Path-Tracking-rviz-Gazebo

./: README.md  requirements.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/path_tracker/lib/path_tracker/: controller_node  main
ros2_ws/install/path_tracker/share/path_tracker/: package.sh
ros2_ws/install/path_tracker/share/path_tracker/launch/: gazebo_control.launch.py  simulation.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/path_tracker/: package.xml  setup.cfg  setup.py
ros2_ws/src/path_tracker/launch/: simulation.launch.py
ros2_ws/src/path_tracker/path_tracker/: controller.py  trajectory_generator.py
